bootstrap basic styling and adding all info from real website to page

--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,13 @@ html {
     height: 100%;
 }
 
-body {
-    color:azure;
+header { 
+  background: rgba(0,0,0,1);
 }
+
+/* body {
+    color:azure;
+} */
 
   .container2 {
     perspective: 1000px;
